{
    "name": "MatchControls",
    "maps": [
        {
            "name": "Piece",
            "id": "7c300c2a-3d2f-4b60-8c15-e4dbe519030c",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Value",
                    "id": "8e51dd16-1da0-44a4-a924-0b5a434f5c82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "dab32cb2-79c9-4da5-8dfe-c868e6b85ff3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateAnticlockwise",
                    "type": "Value",
                    "id": "cf0bac21-1974-487c-9599-5605cd65cd98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateClockwise",
                    "type": "Value",
                    "id": "94fcf7f8-3c6c-4140-bbb6-1534007bfa01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveDown",
                    "type": "Value",
                    "id": "bafc2928-f16c-454b-b6a5-01b15bca1346",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "46309e1c-aaf4-4742-b60d-066b843ba901",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e99ca2b-aaa5-4cec-85ed-320bef82c3f6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88dd09c6-de28-4b87-8c2a-af217e235042",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAnticlockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ccfb891-cbba-4820-a28f-5d0c29068f74",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41ec3376-b810-4671-bc72-753c664d76ac",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}